[project]
name = "testtt"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Carrara",email = "nicolas.carrara1u@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "anthropic (>=0.96.0,<0.97.0)",
    "openai (>=2.32.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
